fix for empty banner titles on mobile

--- a/arc-assets/themes/arc-ut-thehill-child/scss/_page-template-wide.scss
+++ b/arc-assets/themes/arc-ut-thehill-child/scss/_page-template-wide.scss
@@ -31,6 +31,9 @@
 			.banner-subtitle {
 				position: static;
 				padding: 10px;
+				&:empty {
+					padding: 0;
+				}
 			}
 		}
 	}
